--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ html {
         top: 0;
         left: 0;
         background-color: var(--cor-1);
-        height: 80px;
+        height: 100px;
         width: 100vw;
         display: flex;
         align-items: center;
@@ -183,7 +183,7 @@ html {
 .slide {
     margin-top: 79px;
     width: 100vw;
-    height: calc(100vh - 79px) ;
+    height: calc(100vh - 99px) ;
     display: grid;
 }
     .img-box-1 {
@@ -492,103 +492,199 @@ html {
 #sec5 {
     height: 100vh;
     width: 100vw;
-    background-color: var(--cor-1);
+    background-image: url('./assets/imgs/solar3.png');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    
     display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.content-sec5 {
+    background-color: var(--cor-1);
+    height: 60vh;
+    width: 60vw;
+    min-width: 700px;
+    max-width: 1000px;
+    display: flex;
+    align-items: center;
+}
+.inputOutro{
+    display: none;
+}
+
+.left-side-sec5, .right-side-sec5 {
+    width: 90%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.left-side-sec5 {
+    padding-left: 5vw;
+}
+
+    .left-side-sec5 h3 {
+        width: 100%;
+        font-size: 25px;
+        text-align: left;
+        color: var(--cor-2);
+        font-weight: 400;
+    }
+        .left-side-sec5 h3 span {
+            font-weight: 600;
+        }
+
+    .normal-text-sec5 {
+        width: 100%;
+
+        font-size: 13px;
+        color: var(--cor-2);
+        text-align: left;
+    }
+
+    .economia-text-sec5 {
+        width: 100%;
+        font-size: 12px;
+        color: var(--cor-3);
+    }
+
+    .gasto-box-sec5 {
+        width: 100%;
+        height: 10%;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+    }
+
+    .result-box-sec5 {
+        width: 100%;
+        height: 30%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+    }
+
+    .text-economia {
+        font-size: 40px;
+        color: var(--cor-4);
+        width: 100%;
+        text-transform: uppercase;
+        font-weight: 600;
+    }
+
+    .text-economia > span {
+        font-size: 20px;
+        font-weight: 400;
+    }
+
+.gasto-sec5 {
+    color: var(--cor-3);
+    width: 120px;
+    font-size: 25px;
+    font-weight: 500;
+    margin-left: 10px;
+}
+
+.input-range {
+    -webkit-appearance: none;
+    height: 3px;
+    width: 50%;
+    background-color: gray;
+    outline: none;
+    border: none;
+}
+
+.input-range::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    height: 20px;
+    width: 20px;
+    background-color: var(--cor-4);
+    border-radius: 50%;
+    position: relative;
+}
+
+.input-range::-moz-range-progress {
+    background-color: var(--cor-4);
+}
+/* */
+.right-side-sec5 {
+    display: flex;
+    align-items: center;
     justify-content: center;
 }
 
-.content-sec5 {
-    background-color: var(--cor-3);
+.box-content-sec5 {
     height: 100%;
-    width: 500px;
-}
-
-.box-content-sec5:nth-child(1) {
     width: 100%;
-    height: 40%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    position: relative;
 }
-    .box-content-sec5:nth-child(1)::after {
-        content: "";
-        position: absolute;
-        background-color: var(--cor-1);
-        height: 2px;
-        width: 90%;
-        bottom: 0%;
-    }
-.box-content-sec5:nth-child(1) h3 {
-    font-size: 25px;
-    color: var(--cor-1);
-    margin-bottom: 10px;
-    text-transform: uppercase;
-    text-align: center;
-}
-.box-content-sec5:nth-child(1) p {
-    font-size: 20px;
-    color: var(--cor-1);
-    text-align: center;
-    text-transform: uppercase;
-}
-.box-content-sec5:nth-child(2) {
-    width: 100%;
+
+.box-content-sec5 form {
     height: 60%;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.box-content-sec5 form input, .box-content-sec5 form select {
+    width: 90%;
+    height: 25vh;
+    max-height: 40px;
+    outline: none;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 20px;
+    background-color: var(--cor-4);
+    color: var(--cor-1);
+}
+    .box-content-sec5 form input::placeholder {
+        color: var(--cor-1);
+    }
+
+.box-content-sec5 form select {
+    height: 40px;
+}
+
+.arquivo-input {
+    background-color: transparent !important;
+}
+
+.box-content-sec5 form button {
+    height: 40px;
+    width: 60%;
+    border-radius: 20px;
+    border: none;
+    background-color: var(--cor-3);
+    color: var(--cor-1);
+    cursor: pointer;
+    transition: all 1s;
     display: flex;
     align-items: center;
     justify-content: center;
-    position: relative;
-}    
-    .box-content-sec5:nth-child(2) > form {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 15px;
-        justify-content: center;
+}
+    .box-content-sec5 form button:hover {
+        transition: all .2s;
+        transform: scale(1.1);
     }
-        .box-content-sec5:nth-child(2) .input-item {
-            width: 60%;  
-            height: 40px;
-            padding: 10px;     
-            border: none;      
-            border-radius: 5px;
-            outline: none;
-            font-weight: bold;
-        }
-            .box-content-sec5:nth-child(2) .input-item:focus {
-                box-shadow: 2px 0px 30px -5px var(--cor-2);
-            }
-        .box-content-sec5:nth-child(2) .form-btn {
-            width: 60%;  
-            height: 40px;
-            padding: 15px;     
-            margin-top: 30px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            cursor: pointer;
-            transition: var(--normal-t);
-            font-weight: bolder;
-            border: none;
-        }
-            .box-content-sec5:nth-child(2) .form-btn > img{
-                height: 29px;  
-                display: flex;
-                animation: spinloading 1s infinite;
-            }
-            .box-content-sec5:nth-child(2) .form-btn:hover {
-                transform: scale(1.05);
-                background-size: 500% 500%;
-                animation: gradient 3s ease alternate infinite;
-                border: transparent;
-                transition: var(--hover-t);
-            }
-.inputOutro{
-    display: none;
+
+    .form-btn > img{
+        height: 29px;  
+        animation: spinloading 1s infinite;
+    }
+
+.box-content-sec5 form label {
+    margin-top: 10px;
+    text-align: center;
 }
 
 /* --- FIM SEC 5 --- */
