--- a/style.css
+++ b/style.css
@@ -177,6 +177,8 @@ html {
         background-color: var(--cor-3);
         color: var(--cor-1) !important;
         animation: whatsapp-animation 1s infinite alternate-reverse;
+        margin-left: 15px;
+        margin-right: 15px;
     }
 /* FIM NAV */
 /* SEC 1 */ 
@@ -383,10 +385,51 @@ html {
         justify-content: center;
         gap: 50px;
     }
-        .card-box-sec2 > img {
-            height: 20vw;
-            min-height: 300px;
+    
+.card-item-sec2 {
+    height: 20vw;
+    min-height: 300px;
+    width: 240px;
+    background-color: var(--cor-1);
+    border-radius: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+    .card-item-sec2 > .card-item-box-img, .card-item-sec2 > .card-item-box-text {
+        width: 100%;
+        height: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+        .card-item-sec2 > .card-item-box-img > img {
+            height: 6em;
         }
+
+    .card-item-sec2 .text-diff-sec2 {
+        font-size: 1.5em !important;
+    }
+
+    .card-item-sec2 > .card-item-box-text {
+        justify-content: flex-start;
+    }
+
+    .card-item-sec2 > .card-item-box-text > h5 {
+        color: var(--cor-3);
+        font-size: 2em;
+        font-weight: 600;
+    }
+
+    .card-item-sec2 > .card-item-box-text > p {
+        color: var(--cor-3);
+        font-size: 1.6em;
+        text-align: center;
+        line-height: 30px;
+        padding: 0 10px;
+    }
 /* --- init hidden --- */
 .init-hidden {
     opacity: 0;
@@ -394,15 +437,19 @@ html {
     transition: all 1s;
 }
 .init-hidden-1 {
-    transition: all 1s !important;
+    transition: all .5s !important;
 }
 .init-hidden-2 {
-    transition: all 1s;
-    transition-delay: .5s !important;
+    transition: all .5s;
+    transition-delay: .3s !important;
 }
 .init-hidden-3 {
-    transition: all 1s;
-    transition-delay: 1s !important;
+    transition: all .5s;
+    transition-delay: .6s !important;
+}
+.init-hidden-4{
+    transition: all .5s;
+    transition-delay: .9s !important;
 }
 .init-hidden-off {
     opacity: 1;
@@ -488,11 +535,11 @@ html {
          2px 1px 1px  var(--cor-4);
 }
 /* FIM SEC 3 */
-/*--- SEC 4 ---*/
+/*--- SEC 5 ---*/
 #sec5 {
     height: 100vh;
     width: 100vw;
-    background-image: url('./assets/imgs/solar3.png');
+    background-image: url('./assets/imgs/solar4.png');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -509,6 +556,7 @@ html {
     max-width: 1000px;
     display: flex;
     align-items: center;
+    border-radius: 40px;
 }
 .inputOutro{
     display: none;
@@ -655,10 +703,6 @@ html {
     height: 40px;
 }
 
-.arquivo-input {
-    background-color: transparent !important;
-}
-
 .box-content-sec5 form button {
     height: 40px;
     width: 60%;
@@ -693,6 +737,14 @@ footer {
     width: 100%;
     background-color: #000;
 }
+
+@media (max-width: 1200px) {
+    .card-box-sec2 {
+        width: 150%;
+        transform: scale(.8);
+    }
+}
+
 @media (max-width: 950px) {
     /* -- WHATS ICON -- */
 .whatsapp-butoon {
@@ -802,35 +854,49 @@ footer {
 }
 /* */
     /* FIM SEC 1 */
-    /* SEC 2 */
+/* SEC 2 */
 #sec2 {
-    height: 1300px;
+    height: 1400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
     .text-box-sec2 {
-        width: 90%;
         height: 10%;
         align-items: flex-end;
+        padding: 10px;
     }
         .text-box-sec2 h2 {
+            padding: 10px;
+            border-radius: 15px;
+            font-size: 5vw;
             text-align: center;
-            font-size: 30px;
         }
-        .card-box-sec2 > img {
-            height: 300px;
-        }
+        
     .card-box-sec2 {
-        flex-direction: column;
+        margin-top: -50px;
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: flex-start;
+        justify-content: center;
         gap: 30px;
     }
-    .init-hidden-1 {
-        transition-delay: 0s !important;
-    }
-    .init-hidden-2 {
-        transition-delay: 0s !important;
-    }
-    .init-hidden-3 {
-        transition-delay: 0s !important;
-    }
+    
+/* --- init hidden --- */
+.init-hidden {
+    transition: all .5s;
+}
+.init-hidden-2 {
+    transition-delay: 0s !important;
+}
+.init-hidden-3 {
+    transition-delay: .0s !important;
+}
+.init-hidden-4{
+    transition-delay: .0s !important;
+}
 /* FIM SEC 2 */
 /* SEC 3 */
 #sec3 {
@@ -889,4 +955,51 @@ footer {
         text-align: center;
         line-height: 12vw;
     }
+    /*--- SEC 4 ---*/
+
+.content-sec5 {
+    height: 80vh;
+    width: 90vw;
+    flex-direction: column;
+    align-items: center;
+    min-width: 200px;
+}
+
+.left-side-sec5, .right-side-sec5 {
+    width: 90%;
+    height: 90%;
+}
+
+.left-side-sec5 {
+    padding-left: 0;
+}
+
+    .left-side-sec5 h3 {
+        padding-top: 20px;
+        text-align: center;
+    }
+    .normal-text-sec5 {
+        text-align: center;
+    }
+    .gasto-box-sec5 {
+        width: 100%;
+        height: 10%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .result-box-sec5 {
+        align-items: center;
+        text-align: center;
+    }
+    .economia-text-sec5 {
+        text-align: center;
+    }
+/* */
+
+.box-content-sec5 form {
+    height: 70%;
+}
+
 }
