--- a/style.css
+++ b/style.css
@@ -542,8 +542,35 @@ html {
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
+
+.economia-box-sec5 {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 130px;
+    background-color: var(--cor-1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; 
+}
+.economia-box-sec5 h2, .economia-box-sec5 p {
+    text-transform: uppercase;
+    font-size: 30px;
+    color: var(--cor-2);
+    text-align: center;
+}
+
+.economia-box-sec5 p {
+    text-transform: uppercase;
+    font-size: 25px;
+}
+
 .content-sec5 {
+    margin-top: 120px;
     background-color: var(--cor-1);
     height: 60vh;
     width: 60vw;
