--- a/style.css
+++ b/style.css
@@ -754,9 +754,24 @@ html {
     }
 /* --- FIM SEC 5 --- */
 footer {
-    height: 100px;
+    height: 60px;
     width: 100%;
     background-color: #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: normal;
+}
+
+footer a {
+    color: var(--cor-1);
+    text-decoration: none;
+}
+
+footer img {
+    height: 30px;
 }
 
 @media (max-width: 1200px) {
