--- a/style.css
+++ b/style.css
@@ -519,8 +519,8 @@ html {
 
     .class-span-right-1, .class-span-right-4 {
         text-align: center;
-        width: 100%;
         font-size: 8vw;
+        margin-right: 80px;
         text-transform: uppercase;
         font-weight: 600;
         line-height: 7vw;
@@ -530,6 +530,7 @@ html {
         -2px 2px 1px  var(--cor-4),                    
          2px -2px 1px  var(--cor-4),                  
          2px 1px 1px  var(--cor-4);
+
 }
 /* FIM SEC 3 */
 /*--- SEC 5 ---*/
@@ -1000,6 +1001,7 @@ footer img {
         font-size: 13vw;
         text-align: center;
         line-height: 12vw;
+        margin-right: 0px;
     }
     /*--- SEC 5 ---*/
     .content-sec5 {
