--- a/style.css
+++ b/style.css
@@ -360,6 +360,7 @@ html {
 }
     .text-box-sec2 {
         height: 20%;
+        max-width: 1000px;
         width: 100%;
         display: flex;
         align-items: flex-end;
@@ -372,7 +373,7 @@ html {
             color: var(--cor-3);
             padding: 10px;
             border-radius: 15px;
-            font-size: 2vw;
+            font-size: 300%;
         }
     
         .card-box-sec2 {
@@ -388,6 +389,7 @@ html {
 .card-item-sec2 {
     height: 15vw;
     min-height: 250px;
+    max-height: 300px;
     width: 230px;
     background-color: var(--cor-1);
     border-radius: 30px;
@@ -518,15 +520,11 @@ html {
     }
 
     .class-span-right-1, .class-span-right-4 {
-        width: 100%;
+        width: 70%;
         display: flex;
         align-items: center;
         justify-content: center;
 }
-.class-span-right-1 > img, .class-span-right-4 > img {
-    width: 70%;
-}
-
 /* FIM SEC 3 */
 /*--- SEC 5 ---*/
 #sec5 {
