--- a/style.css
+++ b/style.css
@@ -941,53 +941,53 @@ footer img {
     /* FIM SEC 2 */
     /* SEC 3 */
     #sec3 {
-        height: 120vh;
+        height: 100vh;
         flex-direction: column;
         background-image: url('./assets/imgs/grama-mobile.png');
         background-size: 100%;
     }
     .left-side-sec3 {
-        height: 30%;
+        height: 20%;
         width: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: flex-end;
+    }
+        .left-side-sec3 h3 {
+            font-size: 10vw;
+            margin-top: 0%;
+            margin-left: 0%;    
+        }
+        .left-side-sec3 h4 {
+            margin-right: 0;
+            text-align: center;
+            font-size: 9vw;
+            text-transform: uppercase;
+            line-height: 1em;
+            margin-left: 0%;
+            color: var(--cor-3);
+        }
+    .right-side-sec3 {
+        height: 50%;
+        width: 100%;
         justify-content: center;
     }
-    .left-side-sec3 h3 {
-        font-size: 10vw;
-        margin-top: 0%;
-        margin-left: 0%;    
-    }
-    .left-side-sec3 h4 {
-        margin-right: 0;
-        text-align: center;
-        font-size: 9vw;
-        text-transform: uppercase;
-        line-height: 1em;
-        margin-left: 0%;
-        color: var(--cor-3);
-    }
-    .right-side-sec3 {
-        height: 70%;
-        width: 100%;
-        justify-content: flex-start;
-    }
-    .right-side-sec3-box {
-        display: flex;
-        align-items: center;
-        font-size: 5vw;
-        line-height: 5vw;
-        margin-right: 0%;
-        margin-top: 1%;
-        margin-bottom: 1%;
-    }
-    .class-span-right-2 img {
-        height: 15vw;
-    }
-    .class-span-right-3 {
-        font-weight: 700;
-    }
+        .right-side-sec3-box {
+            display: flex;
+            align-items: center;
+            font-size: 5vw;
+            line-height: 5vw;
+            margin-right: 0%;
+            margin-top: 1%;
+            margin-bottom: 1%;
+        }
+        .class-span-right-2 img {
+            height: 15vw;
+        }
+        .class-span-right-3 {
+            font-weight: 700;
+        }
     /*--- SEC 5 ---*/
     .content-sec5 {
         height: 80vh;
