--- a/style.css
+++ b/style.css
@@ -455,76 +455,87 @@ html {
     transform: translateX(0px);
 }
 /* FIM SEC 2 */
-/* SEC 3 */
 #sec3 {
     height: 100vh;
     width: 100vw;
     background-image: url('./assets/imgs/grama.png');
     background-repeat: no-repeat;
-    background-size: 50%;
+    background-size: 55%;
     background-position: bottom left;
     display: flex;
 }
-.left-side-sec3 {
-    height: 100%;
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-}
-    .left-side-sec3 h3 {
-        font-size: 6vw;
-        text-transform: uppercase;
-        text-align: center;
-        color: var(--cor-1);
-        background-color: var(--cor-5);
-        margin-top: 5%;
-        margin-left: 10%;  
-        padding: 0px 4.8vw;  
+    .left-side-sec3 {
+        height: 100%;
+        width: 50%;
     }
-    .left-side-sec3 h4 {
-        margin-right: 45px;
-        font-size: 5vw;
-        text-transform: uppercase;
-        line-height: 1em;
-        margin-left: 10%;
-        color: var(--cor-3);
-    }
-.right-side-sec3 {
-    height: 100%;
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
+        .left-top-side {
+            height: 35%;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+            .left-top-side h3 {
+                font-size: 4.7vw;
+                text-transform: uppercase;
+                text-align: left;
+                color: var(--cor-1);
+                background-color: var(--cor-5);
+                padding: 0px 4.5vw;  
+            }
+            .left-top-side h4 {
+                font-size: 4vw;
+                text-transform: uppercase;
+                line-height: 1em;
+                color: var(--cor-3);
+            }
+        .virtual-box-background-top {
+            height: 65%;
+            width: 100%;
+        }
 
-.class-span-right-2 img {
-    height: 6vw;
-}
-
-.right-side-sec3-box {
-    display: flex;
-    align-items: center;
-    text-transform: uppercase;
-    color: var(--cor-3);
-    font-weight: 500;
-    font-size: 2.5vw;
-    line-height: 2vw;
-    margin-right: 10%;
-    margin-top: 1%;
-    margin-bottom: 1%;
-}
-    .class-span-right-3 {
-        font-weight: 700;
-    }
-
-    .class-span-right-1, .class-span-right-4 {
-        width: 70%;
+    .right-side-sec3 {
+        height: 100%;
+        width: 50%;
         display: flex;
+        flex-direction: column;
         align-items: center;
         justify-content: center;
-}
+    }
+        .class-span-right-2 img {
+            height: 6vw;
+        }
+        .right-side-sec3-box {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-transform: uppercase;
+            margin-top: 1%;
+            margin-bottom: 1%;
+        }
+
+        .right-side-sec3-box  p{
+            color: var(--cor-3);
+            font-weight: 500;
+            font-size: 2.5vw;
+            margin-top: 1%;
+            margin-bottom: 1%;
+        }
+        .class-span-right-3 {
+            font-weight: 700;
+        }
+        .class-span-right-1, .class-span-right-4 {
+            width: 70%;
+            line-height: 2vw;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .virtual-box-background-bottom {
+            display: none;
+        }
 /* FIM SEC 3 */
 /*--- SEC 5 ---*/
 #sec5 {
@@ -551,7 +562,6 @@ html {
     flex-direction: column;
     align-items: center;
     justify-content: center; 
-    margin-top: -5px;
 }
 .economia-box-sec5 h2, .economia-box-sec5 p {
     text-transform: uppercase;
@@ -941,53 +951,58 @@ footer img {
     /* FIM SEC 2 */
     /* SEC 3 */
     #sec3 {
-        height: 100vh;
-        flex-direction: column;
         background-image: url('./assets/imgs/grama-mobile.png');
-        background-size: 100%;
-    }
-    .left-side-sec3 {
-        height: 20%;
-        width: 100%;
+        background-size: 95%;
         display: flex;
         flex-direction: column;
-        align-items: center;
-        justify-content: flex-end;
     }
-        .left-side-sec3 h3 {
-            font-size: 10vw;
-            margin-top: 0%;
-            margin-left: 0%;    
+        .left-side-sec3 {
+            height: 20%;
+            width: 100%;
         }
-        .left-side-sec3 h4 {
-            margin-right: 0;
-            text-align: center;
-            font-size: 9vw;
-            text-transform: uppercase;
-            line-height: 1em;
-            margin-left: 0%;
-            color: var(--cor-3);
+            .left-top-side {
+                height: 100%;
+                width: 100%;
+                justify-content: flex-end;
+            }
+                .left-top-side h3 {
+                    font-size: 10vw;
+                    text-transform: uppercase;
+                }
+                .left-top-side h4 {
+                    font-size: 8vw;
+                    text-align: center;
+                }
+            .virtual-box-background-top {
+                display: none;
+            }
+        .right-side-sec3 {
+            height: 50%;
+            width: 100%;
         }
-    .right-side-sec3 {
-        height: 50%;
-        width: 100%;
-        justify-content: center;
-    }
-        .right-side-sec3-box {
-            display: flex;
-            align-items: center;
-            font-size: 5vw;
-            line-height: 5vw;
-            margin-right: 0%;
-            margin-top: 1%;
-            margin-bottom: 1%;
+            
+            .right-side-sec3-box {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                text-transform: uppercase;
+                margin-top: 1%;
+                margin-bottom: 1%;
+            }
+                .right-side-sec3-box  p{
+                    color: var(--cor-3);
+                    font-weight: 500;
+                    font-size: 5vw;
+                }
+                .class-span-right-2 img {
+                    height: 17vw;
+                }
+        .virtual-box-background-bottom {
+            display: block;
+            height: 30%;
+            width: 100%;
         }
-        .class-span-right-2 img {
-            height: 15vw;
-        }
-        .class-span-right-3 {
-            font-weight: 700;
-        }
+    /* FIM SEC 3 */
     /*--- SEC 5 ---*/
     .content-sec5 {
         height: 80vh;
