--- a/style.css
+++ b/style.css
@@ -998,7 +998,7 @@ footer img {
         .virtual-box-background-bottom {
             display: block;
             background-image: url('./assets/imgs/grama-mobile.png');
-            background-size: 95%;
+            background-size: contain;
             background-position: center left;
             background-repeat: no-repeat;
             height: 30%;
